<resources>
    <string name="app_name">Dongzi</string>
    <string name="tv_login">둥지에 오신 것을 환영합니다 ;)</string>
    <string name="tf_phoneNumber_hint">전화번호</string>
    <string name="tf_password_hint">비밀번호</string>
    <string name="btn_login_text">로그인</string>
    <string name="tv_register_text">아직 회원이 아니신가요?</string>
    <string name="btn_register_text">회원가입</string>
    <string name="btn_find_id_text">아이디 찾기</string>
    <string name="btn_find_password_text">비밀번호 찾기</string>
    <string name="tv_find_password_text">비밀번호를 잊으셨나요?</string>
    <string name="tv_name_text">이름을 입력해주세요.</string>
    <string name="tf_name_text">이름 입력</string>
    <string name="tv_password_text">비밀번호를 입력해주세요.</string>
    <string name="tf_password_text">영문, 숫자, 특수문자 포함 8~20자리</string>
    <string name="tf_check_password_text">비밀번호 확인</string>
    <string name="tv_email">이메일 주소를 입력해주세요.</string>
    <string name="tf_email_text">example@email.com</string>
    <string name="btn_phone_text">가입하기</string>
    <string name="textView_text">둥지의 서비스를 이용하기 위해\n약관 동의가 필요합니다 ;)</string>
    <string name="checkBox_text">전체 동의</string>
    <string name="checkBox2_text">이용약관 동의(필수)</string>
    <string name="checkBox3_text">개인정보 수집 및 이용 동의(필수)</string>
    <string name="checkBox4_text">광고성 정보 수신 동의(선택)</string>
    <string name="btn_pass_text">Pass</string>
    <string name="toolbar_text">한양대 ERICA 캠퍼스</string>
    <string name="title_activity_maps">MapsActivity</string>

    <string-array name="roomType">
        <item>원룸</item>
        <item>투룸</item>
        <item>쉐어하우스</item>
        <item>오피스텔</item>
        <item>아파트</item>
        <item>고시텔</item>
    </string-array>

    <string-array name="roomFloors">
        <item>반지층</item>
        <item>1층</item>
        <item>2층</item>
        <item>3층</item>
        <item>4층</item>
        <item>5층</item>
        <item>6층</item>
        <item>7층</item>
        <item>8층</item>
        <item>9층</item>
        <item>10층</item>
        <item>11층</item>
        <item>12층</item>
        <item>13층</item>
    </string-array>
</resources>